CREATE TABLE "devices" (
  "d_id" integer PRIMARY KEY,
  "d_address" varchar NOT NULL,
  "d_port" integer NOT NULL,
  "d_stream" integer
);

CREATE TABLE "channels" (
  "c_id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "d_id" integer NOT NULL,
  "c_name" varchar NOT NULL,
  "c_freq" integer NOT NULL,
  "c_endpoint" integer
);

CREATE TABLE "utilisation" (
  "u_id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "c_id" integer NOT NULL,
  "a_start_time" integer NOT NULL,
  "a_end_time" integer,
  "duration" integer,
  "is_active" bool DEFAULT false
);

CREATE TABLE "strength" (
  "s_id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "c_id" integer NOT NULL,
  "s_sample_time" integer NOT NULL,
  "s_strength" float NOT NULL
);

CREATE TABLE "sessions" (
  "session_id" INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "auth_token" varchar NOT NULL
);

CREATE TABLE "session_listeners" (
  "session_id" integer,
  "c_id" integer,
  PRIMARY KEY ("session_id", "c_id")
);

CREATE TABLE "pi_api" (
  "username" varchar PRIMARY KEY,
  "api_key1" varchar NOT NULL
);

COMMENT ON COLUMN "devices"."d_id" IS 'Unique preallocated random id identifying a specific raspberry pi';

COMMENT ON COLUMN "devices"."d_address" IS 'Current Public IP address for this raspberry pi';

COMMENT ON COLUMN "devices"."d_port" IS 'Current Port for accessing this raspberry pi';

COMMENT ON COLUMN "channels"."c_id" IS 'unique channel ID (combines name and frequency)';

COMMENT ON COLUMN "channels"."c_name" IS 'DFES Channel name';

COMMENT ON COLUMN "channels"."c_freq" IS 'DFES Channel frequency';

COMMENT ON COLUMN "channels"."c_endpoint" IS 'Unique random integer, which acts as the HTTP endpoint for streaming';

COMMENT ON COLUMN "utilisation"."a_start_time" IS 'Start time for a period where channel was used/was being monitored';

COMMENT ON COLUMN "utilisation"."a_end_time" IS 'End time for a period where channel was used, if null assume ongoing';

COMMENT ON COLUMN "utilisation"."duration" IS 'For ease of use, =end_time-start_time';

COMMENT ON COLUMN "utilisation"."is_active" IS 'True=no data because channel was being monitored';

COMMENT ON COLUMN "strength"."s_sample_time" IS 'Epoch time (seconds) this strength sample was taken';

COMMENT ON COLUMN "strength"."s_strength" IS 'Measured in Dbm';

COMMENT ON COLUMN "sessions"."session_id" IS 'identifies a client session to track ongoing monitoring';

COMMENT ON COLUMN "sessions"."auth_token" IS 'Entra-ID token for verification - Not sure if necessary';

ALTER TABLE "channels" ADD FOREIGN KEY ("d_id") REFERENCES "devices" ("d_id");

ALTER TABLE "utilisation" ADD FOREIGN KEY ("c_id") REFERENCES "channels" ("c_id");

ALTER TABLE "strength" ADD FOREIGN KEY ("c_id") REFERENCES "channels" ("c_id");

ALTER TABLE "session_listeners" ADD FOREIGN KEY ("session_id") REFERENCES "sessions" ("session_id");

ALTER TABLE "session_listeners" ADD FOREIGN KEY ("c_id") REFERENCES "channels" ("c_id");
