Project RRMS {
  database_type: 'PostgreSQL'
}

Table Devices {
  d_id integer [primary key, note: "Unique preallocated random id identifying a specific raspberry pi"]
  d_address varchar [not null, note: "Current NGrok URL for this raspberry pi"]
  d_port integer [not null, note: "Current Port for accessing this raspberry pi (now unused)"]
  d_stream integer [not null, note: "Current frequency being streamed from this device"]
}

Table Channels {
  c_id integer [primary key, increment, note: "unique channel ID (combines name and frequency)"]
  d_id integer [not null]
  c_name varchar2 [not null, note: "DFES Channel name"]
  c_freq integer  [not null, note: "DFES Channel frequency"]
}

Table Utilisation {
  u_id integer [primary key, increment]
  c_id integer [not null]
  a_start_time integer [not null, note: "Start time for a period where channel was used/was being monitored"]
  a_end_time integer [note: "End time for a period where channel was used, if null assume ongoing"]
}

Table Strength {
  s_id integer [primary key, increment]
  c_id integer [not null]
  s_sample_time integer [not null, note: "Epoch time (seconds) this strength sample was taken"]
  s_strength float  [not null, note: "Measured in Dbm"]
}

Ref: Devices.d_id < Channels.d_id
Ref: Channels.c_id < Utilisation.c_id
Ref: Channels.c_id < Strength.c_id
